Fix font paths
- Try and fix issue with fonts not showing up in the /OHI-science/ demo

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -4,8 +4,8 @@
   font-style: normal;
   font-weight: 100;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-100.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-100.woff') format('woff');
+       url('fonts/montserrat-v15-latin-100.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-100.woff') format('woff');
 }
 /* montserrat-100italic - latin */
 @font-face {
@@ -13,8 +13,8 @@
   font-style: italic;
   font-weight: 100;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-100italic.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-100italic.woff') format('woff');
+       url('fonts/montserrat-v15-latin-100italic.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-100italic.woff') format('woff');
 }
 /* montserrat-200 - latin */
 @font-face {
@@ -22,8 +22,8 @@
   font-style: normal;
   font-weight: 200;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-200.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-200.woff') format('woff');
+       url('fonts/montserrat-v15-latin-200.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-200.woff') format('woff');
 }
 /* montserrat-200italic - latin */
 @font-face {
@@ -31,8 +31,8 @@
   font-style: italic;
   font-weight: 200;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-200italic.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-200italic.woff') format('woff');
+       url('fonts/montserrat-v15-latin-200italic.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-200italic.woff') format('woff');
 }
 /* montserrat-300 - latin */
 @font-face {
@@ -40,8 +40,8 @@
   font-style: normal;
   font-weight: 300;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-300.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-300.woff') format('woff');
+       url('fonts/montserrat-v15-latin-300.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-300.woff') format('woff');
 }
 /* montserrat-300italic - latin */
 @font-face {
@@ -49,8 +49,8 @@
   font-style: italic;
   font-weight: 300;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-300italic.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-300italic.woff') format('woff');
+       url('fonts/montserrat-v15-latin-300italic.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-300italic.woff') format('woff');
 }
 /* montserrat-regular - latin */
 @font-face {
@@ -58,8 +58,8 @@
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-regular.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-regular.woff') format('woff');
+       url('fonts/montserrat-v15-latin-regular.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-regular.woff') format('woff');
 }
 /* montserrat-italic - latin */
 @font-face {
@@ -67,8 +67,8 @@
   font-style: italic;
   font-weight: 400;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-italic.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-italic.woff') format('woff');
+       url('fonts/montserrat-v15-latin-italic.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-italic.woff') format('woff');
 }
 /* montserrat-500 - latin */
 @font-face {
@@ -76,8 +76,8 @@
   font-style: normal;
   font-weight: 500;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-500.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-500.woff') format('woff');
+       url('fonts/montserrat-v15-latin-500.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-500.woff') format('woff');
 }
 /* montserrat-600 - latin */
 @font-face {
@@ -85,8 +85,8 @@
   font-style: normal;
   font-weight: 600;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-600.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-600.woff') format('woff');
+       url('fonts/montserrat-v15-latin-600.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-600.woff') format('woff');
 }
 /* montserrat-700 - latin */
 @font-face {
@@ -94,8 +94,8 @@
   font-style: normal;
   font-weight: 700;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-700.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-700.woff') format('woff');
+       url('fonts/montserrat-v15-latin-700.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-700.woff') format('woff');
 }
 /* montserrat-800 - latin */
 @font-face {
@@ -103,8 +103,8 @@
   font-style: normal;
   font-weight: 800;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-800.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-800.woff') format('woff');
+       url('fonts/montserrat-v15-latin-800.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-800.woff') format('woff');
 }
 /* montserrat-900 - latin */
 @font-face {
@@ -112,6 +112,6 @@
   font-style: normal;
   font-weight: 900;
   src: local(''),
-       url('../fonts/montserrat-v15-latin-900.woff2') format('woff2'),
-       url('../fonts/montserrat-v15-latin-900.woff') format('woff');
+       url('fonts/montserrat-v15-latin-900.woff2') format('woff2'),
+       url('fonts/montserrat-v15-latin-900.woff') format('woff');
 }
